--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -12,11 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Content\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="Content\cat.png">
+	  <None Update="Textures\cat.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
