--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<TargetFramework>net461</TargetFramework>
 		<Platforms>AnyCPU;x64;x86</Platforms>
 		<StartupObject></StartupObject>
