--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ImGui.NET" Version="1.75.0" />
 		<PackageReference Include="OpenTK" Version="3.2.0" />
 	</ItemGroup>
 
