--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -7,10 +7,20 @@
 		<StartupObject></StartupObject>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <WarningLevel>0</WarningLevel>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AssimpNet" Version="4.1.0" />
 		<PackageReference Include="ImGui.NET" Version="1.75.0" />
 		<PackageReference Include="OpenTK" Version="3.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Properties\Settings.settings">
+	    <Generator>SettingsSingleFileGenerator</Generator>
+	  </None>
 	</ItemGroup>
 
 </Project>
