--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -18,9 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="Properties\Settings.settings">
-	    <Generator>SettingsSingleFileGenerator</Generator>
-	  </None>
+	  <Folder Include="Properties\" />
 	</ItemGroup>
 
 </Project>
