--- a/GAEngine/GAEngine/GAEngine.csproj
+++ b/GAEngine/GAEngine/GAEngine.csproj
@@ -14,6 +14,7 @@
 	<ItemGroup>
 		<PackageReference Include="AssimpNet" Version="4.1.0" />
 		<PackageReference Include="ImGui.NET" Version="1.75.0" />
+		<PackageReference Include="NUnit" Version="3.12.0" />
 		<PackageReference Include="OpenTK" Version="3.2.0" />
 	</ItemGroup>
 
